--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tauri-apps/api": "^1.6.0",
-		"bits-ui": "^0.21.11",
+		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.17",
 		"highlight.js": "^11.9.0",
@@ -41,6 +41,7 @@
 		"marked": "^9.1.4",
 		"marked-highlight": "^2.0.6",
 		"mode-watcher": "^0.3.1",
+		"svelte-codemirror-editor": "^1.4.0",
 		"svelte-sonner": "^0.3.25",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
