--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.3", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.7.0", features = [ "path-all", "window-show", "window-hide", "fs-all", "window-start-dragging", "shell-all", "dialog-all", "window-unminimize", "window-maximize", "window-close", "window-unmaximize", "window-minimize"] }
+tauri = { version = "1.7.0", features = [ "updater", "path-all", "window-show", "window-hide", "fs-all", "window-start-dragging", "shell-all", "dialog-all", "window-unminimize", "window-maximize", "window-close", "window-unmaximize", "window-minimize"] }
 window-shadows = { git = "https://github.com/tauri-apps/window-shadows", branch = "dev" }
 tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 
