--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"tauri": "tauri",
+        "cargo-clean": "cargo clean --manifest-path ./src-tauri/Cargo.toml",
 		"sveltekit:dev": "vite dev",
 		"sveltekit:build": "vite build"
 	},
