--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           releaseName: 'md-editor v__VERSION__'
-          releaseBody: 'See the assets to download this version and install.'
+          releaseBody: 'https://github.com/kbh1301/md-editor/releases'
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
