--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,32 +64,24 @@ jobs:
           args: ${{ matrix.args }}
           includeUpdaterJson: true
 
-      - name: Install GitHub CLI
-        run: sudo apt-get install -y gh
-
-      - name: Post-process release assets
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Rename and filter release assets
+        if: always()
         run: |
-          TAG="app-v__VERSION__"
-          gh release download $TAG
-          
-          mv md-editor_*_aarch64.dmg "Installer for Mac (Apple Silicon)"
-          mv md-editor_*_x64.dmg "Installer for Mac (Intel)"
-          mv md-editor_*_en-US.msi "Installer for Windows"
-          mv md-editor_*_amd64.AppImage "Installer for Linux"
-          
-          gh release upload $TAG "Installer for Mac (Apple Silicon).dmg" "Installer for Mac (Intel).dmg" "Installer for Windows.msi" "Installer for Linux.AppImage"
-          
-          gh release upload $TAG md-editor_*_aarch64.app.tar.gz md-editor_*_x64.app.tar.gz md-editor_*_en-US.msi.zip md-editor_*_amd64.AppImage.tar.gz
-          
-          gh release upload $TAG latest.json Source*zip Source*tar.gz
-
-          for FILE in $(ls md-editor_* | grep -v -E 'aarch64.app.tar.gz|x64.app.tar.gz|en-US.msi.zip|amd64.AppImage.tar.gz|aarch64.dmg|x64.dmg|en-US.msi|amd64.AppImage|latest.json'); do
-            gh release delete-asset $TAG $(gh release view $TAG --json assets --jq '.assets[] | select(.name == "'"$FILE"'") | .id')
+          for file in release/*; do
+            case "$file" in
+              *aarch64.dmg) mv "$file" release/Installer\ for\ Mac\ \(Apple\ Silicon\).dmg ;;
+              *x64.dmg) mv "$file" release/Installer\ for\ Mac\ \(Intel\).dmg ;;
+              *en-US.msi) mv "$file" release/Installer\ for\ Windows.msi ;;
+              *amd64.AppImage) mv "$file" release/Installer\ for\ Linux.AppImage ;;
+              *aarch64.app.tar.gz|*x64.app.tar.gz|*en-US.msi.zip|*amd64.AppImage.tar.gz|latest.json|*.zip|*.tar.gz) ;;
+              *) rm "$file" ;;
+            esac
           done
-        # Rename installers
-        # Upload renamed files
-        # Upload required updaters
-        # Upload latest.json and source files
-        # Delete the unnecessary files from the release
+
+      - name: Upload release assets
+        uses: actions/upload-release-asset@v2
+        with:
+          upload_url: ${{ steps.tauri-action.outputs.upload_url }}
+          asset_path: release/*
+          asset_name: $(basename $file)
+          asset_content_type: application/octet-stream
