--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,21 +67,24 @@ jobs:
       - name: Rename and filter release assets
         if: always()
         run: |
+          mkdir renamed-release
           for file in release/*; do
             case "$file" in
-              *aarch64.dmg) mv "$file" release/Installer\ for\ Mac\ \(Apple\ Silicon\).dmg ;;
-              *x64.dmg) mv "$file" release/Installer\ for\ Mac\ \(Intel\).dmg ;;
-              *en-US.msi) mv "$file" release/Installer\ for\ Windows.msi ;;
-              *amd64.AppImage) mv "$file" release/Installer\ for\ Linux.AppImage ;;
-              *aarch64.app.tar.gz|*x64.app.tar.gz|*en-US.msi.zip|*amd64.AppImage.tar.gz|latest.json|*.zip|*.tar.gz) ;;
+              *aarch64.dmg) mv "$file" "renamed-release/Installer for Mac (Apple Silicon).dmg" ;;
+              *x64.dmg) mv "$file" "renamed-release/Installer for Mac (Intel).dmg" ;;
+              *en-US.msi) mv "$file" "renamed-release/Installer for Windows.msi" ;;
+              *amd64.AppImage) mv "$file" "renamed-release/Installer for Linux.AppImage" ;;
+              *aarch64.app.tar.gz|*x64.app.tar.gz|*en-US.msi.zip|*amd64.AppImage.tar.gz|latest.json|*.zip|*.tar.gz)
+                cp "$file" renamed-release/ ;;
               *) rm "$file" ;;
             esac
           done
 
-      - name: Upload release assets
-        uses: actions/upload-release-asset@v2
-        with:
-          upload_url: ${{ steps.tauri-action.outputs.upload_url }}
-          asset_path: release/*
-          asset_name: $(basename $file)
-          asset_content_type: application/octet-stream
+      - name: Install GitHub CLI
+        uses: cli/cli-action@v2
+
+      - name: Upload release assets using GitHub CLI
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release upload "app-v__VERSION__" renamed-release/* --clobber
