--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: lts/*
       - id: create-release
-        uses: actions/github-script@7
+        uses: actions/github-script@v7
         with:
           script: |
             const { data } = await github.rest.repose.createRelease({
