GitHub Actions updates

--- a/.github/actions/post-release/package.json
+++ b/.github/actions/post-release/package.json
@@ -1,14 +1,13 @@
 {
   "name": "post-release",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build src/index.js --minify --out lib"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.1"
+  },
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0"
