--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -82,6 +82,7 @@ jobs:
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           releaseId: ${{ needs.create-release.outputs.release-id }}
+          releaseBody: 'Changelog: https://github.com/kbh1301/md-editor/releases'
           args: ${{ matrix.args }}
 
   post-release:
