--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,8 +30,8 @@ jobs:
             const { data } = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: `app-v${process.env.PACKAGE_VERSION}`,
-              name: `md-editor v${process.env.PACKAGE_VERSION}`,
+              tag_name: `app-v${{ env.PACKAGE_VERSION }}`,
+              name: `md-editor v${{ env.PACKAGE_VERSION }}`,
               draft: true,
               prerelease: false,
               generate_release_notes: true
