--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,10 @@ jobs:
         with:
           node-version: lts/*
       - name: get version
+        id: get-version
         run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+        outputs:
+          version: ${{ steps.get-version.outputs.PACKAGE_VERSION }}
       - name: create release
         id: create-release
         uses: actions/github-script@v7
@@ -81,7 +84,7 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: app-v__VERSION__
+          tagName: app-v${{ needs.create-release.outputs.version }}
           releaseId: ${{ needs.create-release.outputs.release-id }}
           releaseBody: 'Changelog: https://github.com/kbh1301/md-editor/releases'
           args: ${{ matrix.args }}
