--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       release-id: ${{ steps.create-release.outputs.result }}
+      package-version: ${{ steps.get-version.outputs.package-version }}
     steps:
       - uses: actions/checkout@v4
       - name: setup node
@@ -24,7 +25,7 @@ jobs:
         id: get-version
         run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
         outputs:
-          version: ${{ steps.get-version.outputs.PACKAGE_VERSION }}
+          package-version: ${{ env.PACKAGE_VERSION }}
       - name: create release
         id: create-release
         uses: actions/github-script@v7
@@ -84,7 +85,7 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: app-v${{ needs.create-release.outputs.version }}
+          tagName: app-v${{ needs.create-release.outputs.package-version }}
           releaseId: ${{ needs.create-release.outputs.release-id }}
           releaseBody: 'Changelog: https://github.com/kbh1301/md-editor/releases'
           args: ${{ matrix.args }}
