--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.7.0", features = [ "updater", "path-all", "window-show", "window-hide", "fs-all", "window-start-dragging", "shell-all", "dialog-all", "window-unminimize", "window-maximize", "window-close", "window-unmaximize", "window-minimize"] }
 window-shadows = { git = "https://github.com/tauri-apps/window-shadows", branch = "dev" }
 tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
