--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
-		"@tauri-apps/cli": "^1.6.0",
+		"@tauri-apps/cli": "^2.9.6",
 		"@types/node": "^22.5.5",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
@@ -37,7 +37,9 @@
 	"dependencies": {
 		"@codemirror/lang-markdown": "^6.2.5",
 		"@codemirror/theme-one-dark": "^6.1.2",
-		"@tauri-apps/api": "^1.6.0",
+		"@tauri-apps/api": "^2.9.1",
+		"@tauri-apps/plugin-dialog": "^2.5.0",
+		"@tauri-apps/plugin-fs": "^2.4.5",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.17",
