--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@tauri-apps/api": "^2.9.1",
 		"@tauri-apps/plugin-dialog": "^2.5.0",
 		"@tauri-apps/plugin-fs": "^2.4.5",
+		"@tauri-apps/plugin-opener": "^2.5.3",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.17",
