--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tauri-plugin-dialog = { version = "2" }
 tauri-plugin-fs = { version = "2" }
 tauri-plugin-single-instance = { version = "2" }
 tauri-plugin-shell = "2"
+tauri-plugin-opener = "2"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
